--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-  <title>CookbookAngular2</title>
+  <title>Cookbook</title>
   <base href="/">
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">-->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <!--<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>-->
+  <div id="outer-container">
+    <div class="container">
+      <div class="row">
+         <div class="col s12 l10 offset-l1">
+          <app-root>Loading...</app-root>
+         </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
