--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Cookbook</title>
+  <title>Cookbook A2</title>
   <base href="/">
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">-->
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <!--<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>-->
   <div id="outer-container">
     <div class="container">
       <div class="row">
